@@ -4,6 +4,7 @@ Also if you want the amount or email address or whatever listet, send me an emai
 
 * Andrew Pantyukhin
 * Ben Klemens
+* Sjoerd Siebinga
 
 I want to say a big <b>THANK YOU</b> for all people which supported this project in this way.
 </pre>
