@@ -42,6 +42,7 @@ FEATURES:
 5 Sort :open completion by date?
 5 make use of the ] and [ keys to e.g. jump to the next heading ]], next image ]i, previous textbox [t and so on
 5 add tag support to adding/deleting bookmarks
+4 change :exec to behave more vim like, and add a seperate :javascript << EOF command
 4 Support multiple top-level windows?
 3 Splitting Windows with [:sp :vsp ctrl-w,s ctrl-w,v] and closing with [ctrl-w,q], moving with [ctrl-w,w or tab]
   have a look into the split browser extension
